apply new code formatter