@@ -41,17 +41,15 @@ public class GmailEngine extends ListImageCaptchaEngine {
 		int fontSize = 21;
 
 		// word generator
-		WordGenerator dictionnaryWords = new ComposeDictionaryWordGenerator(new FileDictionary(
-				"toddlist"));
+		WordGenerator dictionnaryWords = new ComposeDictionaryWordGenerator(new FileDictionary("toddlist"));
 
 		// word2image components
 		TextPaster randomPaster = new DecoratedRandomTextPaster(minWordLength, maxWordLength,
-				new RandomListColorGenerator(new Color[] { new Color(23, 170, 27),
-						new Color(220, 34, 11), new Color(23, 67, 172) }), new TextDecorator[] {});
-		BackgroundGenerator background = new UniColorBackgroundGenerator(imageWidth, imageHeight,
-				Color.white);
-		FontGenerator font = new RandomFontGenerator(new Integer(fontSize),
-				Integer.valueOf(fontSize), new Font[] { new Font("nyala", Font.BOLD, fontSize),
+				new RandomListColorGenerator(new Color[] { new Color(23, 170, 27), new Color(220, 34, 11),
+						new Color(23, 67, 172) }), new TextDecorator[] {});
+		BackgroundGenerator background = new UniColorBackgroundGenerator(imageWidth, imageHeight, Color.white);
+		FontGenerator font = new RandomFontGenerator(new Integer(fontSize), Integer.valueOf(fontSize),
+				new Font[] { new Font("nyala", Font.BOLD, fontSize),
 						new Font("Bell MT", Font.PLAIN, fontSize),
 						new Font("Credit valley", Font.BOLD, fontSize) });
 
@@ -59,8 +57,8 @@ public class GmailEngine extends ListImageCaptchaEngine {
 		ImageDeformation backDef = new ImageDeformationByFilters(new ImageFilter[] {});
 		ImageDeformation textDef = new ImageDeformationByFilters(new ImageFilter[] {});
 
-		WordToImage word2image = new DeformedComposedWordToImage(font, background, randomPaster,
-				backDef, textDef, postDef);
+		WordToImage word2image = new DeformedComposedWordToImage(font, background, randomPaster, backDef,
+				textDef, postDef);
 		addFactory(new GimpyFactory(dictionnaryWords, word2image));
 	}
 
